# MIGT-Splitter

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: basic_usage.py
migt/: __init__.py  mi.py  splitter.py  utils.py
migt.egg-info/: PKG-INFO  requires.txt
