[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migt"
version = "0.1.2"
description = "Mutual Information Guided Training (MIGT) dataset partitioning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
  {name = "Lida Shahmiri", email = "lida_shahmiri@yahoo.co.uk"}
]

dependencies = [
  "numpy",
  "opencv-python",
  "scikit-learn",
  "tqdm",
  "scikit-image"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/LShahmiri/MIGT-Splitter"
Repository = "https://github.com/LShahmiri/MIGT-Splitter"
Issues = "https://github.com/LShahmiri/MIGT-Splitter/issues"
