[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migt"
version = "0.1.2"
description = "Mutual Information Guided Training (MIGT) dataset partitioning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
  {name = "Lida Shahmiri", email = "lida_shahmiri@yahoo.co.uk"}
]

keywords = ["data-science", "machine-learning", "data-analysis", "feature-selection", "data-preprocessing"]
dependencies = [
"colorama>=0.4.6",
"ImageIO>=2.37.2",
"joblib>=1.5.3",
"lazy_loader>=0.4v,
"networkx>=3.6.1",
"numpy>=2.4.1v",
"opencv-python>=4.13.0.90",
"packaging>=26.0",
"pandas>=3.0.0",
"pillow>=12.1.0",
"python-dateutil>=2.9.0.post0",
"scikit-image>=0.26.0",
"scikit-learn>=1.8.0",
"scipy>=1.17.0",
"six>=1.17.0",
"threadpoolctl>=3.6.0",
"tifffile>=2026.1.14",
"tqdm>=4.67.1",
"tzdata>=2025.3",

]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/LShahmiri/MIGT-Splitter"
Repository = "https://github.com/LShahmiri/MIGT-Splitter"
Issues = "https://github.com/LShahmiri/MIGT-Splitter/issues"
