[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migt"
version = "0.1.1"
description = "Model-agnostic dataset partitioning using Mutual Information"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Lida Shahmiri", email = "lida_shahmiri@yahoo.co.uk" }
]

keywords = [
  "mutual-information",
  "information-theory",
  "dataset-partitioning",
  "machine-learning",
  "computer-vision"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.8",
  "scikit-learn>=1.2",
  "scikit-image>=0.19",
  "opencv-python>=4.5",
  "pillow>=9.0",
  "tqdm>=4.64"
]

[project.urls]
Homepage = "https://github.com/LShahmiri/MIGT-Splitter"
Repository = "https://github.com/LShahmiri/MIGT-Splitter"
Issues = "https://github.com/LShahmiri/MIGT-Splitter/issues"
Paper = "https://ieeexplore.ieee.org/abstract/document/10053008"
